--- a/.github/workflows/build_latest.yml
+++ b/.github/workflows/build_latest.yml
@@ -40,7 +40,7 @@ jobs:
    
     - name: Build executables
       run: |
-        pyinstaller --onefile ${{ matrix.script }}.py 
+        pyinstaller --onefile  --static ${{ matrix.script }}.py 
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
