--- a/.github/workflows/build_latest.yml
+++ b/.github/workflows/build_latest.yml
@@ -25,12 +25,7 @@ jobs:
     - name: update lib
       run: |
           sudo apt update
-          sudo apt install libc6 libpthread-stubs0-dev zlib1g
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.11'
+          sudo apt install -y build-essential musl-tools gcc-multilib g++-multilib zlib1g-dev python3-dev python3-pip
         
     - name: Install Dependencies
       run: |
