--- a/.github/workflows/build_latest.yml
+++ b/.github/workflows/build_latest.yml
@@ -12,6 +12,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04-arm
+    container: alpine:latest
     strategy:
       matrix:
         script: [down_aria2, test]
@@ -24,8 +25,8 @@ jobs:
 
     - name: update lib
       run: |
-          sudo apt update
-          sudo apt install -y build-essential musl-tools gcc-multilib g++-multilib zlib1g-dev python3-dev python3-pip
+          apt update
+          apt install -y build-essential musl-tools gcc-multilib g++-multilib zlib1g-dev python3-dev python3-pip
         
     - name: Install Dependencies
       run: |
