--- a/.github/workflows/build_latest.yml
+++ b/.github/workflows/build_latest.yml
@@ -25,8 +25,8 @@ jobs:
 
     - name: update lib
       run: |
-          apt update
-          apt install -y build-essential musl-tools gcc-multilib g++-multilib zlib1g-dev python3-dev python3-pip
+          apt-get update
+          apt-get install -y build-essential musl-tools gcc-multilib g++-multilib zlib1g-dev python3-dev python3-pip
         
     - name: Install Dependencies
       run: |
