--- a/.github/workflows/build_latest.yml
+++ b/.github/workflows/build_latest.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-22.04-arm
-    container: alpine:latest
+    container: python:3.10-alpine
     strategy:
       matrix:
         script: [down_aria2, test]
@@ -23,14 +23,14 @@ jobs:
       with:
         ref: '${{ github.event.inputs.ref }}'
 
-    - name: update lib
-      run: |
-          apk update
-          apk install -y build-essential musl-tools gcc-multilib g++-multilib zlib1g-dev python3-dev python3-pip
+    # - name: update lib
+    #   run: |
+    #       apk update
+    #       apk install -y build-essential musl-tools gcc-multilib g++-multilib zlib1g-dev python3-dev python3-pip
         
     - name: Install Dependencies
       run: |
-        python -m pip install --upgrade pip
+        # python -m pip install --upgrade pip
         pip install pyinstaller    
         pip install -r requirements.txt
    
