--- a/.github/workflows/build_latest.yml
+++ b/.github/workflows/build_latest.yml
@@ -23,10 +23,10 @@ jobs:
       with:
         ref: '${{ github.event.inputs.ref }}'
 
-    # - name: update lib
-    #   run: |
-    #       apk update
-    #       apk install -y build-essential musl-tools gcc-multilib g++-multilib zlib1g-dev python3-dev python3-pip
+    - name: update lib
+      run: |
+          apk update
+          apk add build-essential clang binutils-aarch64-linux-gnu
         
     - name: Install Dependencies
       run: |
