--- a/.github/workflows/build_latest.yml
+++ b/.github/workflows/build_latest.yml
@@ -38,8 +38,8 @@ jobs:
       run: |
         pyinstaller --onefile ${{ matrix.script }}.py 
 
+    - name: Install GitHub CLI
+      run: apk add gh
+    
     - name: Upload artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ matrix.script }}
-        path: dist/${{ matrix.script }}
+      run: gh run upload dist/${{ matrix.script }}
