--- a/.github/workflows/build_latest.yml
+++ b/.github/workflows/build_latest.yml
@@ -37,9 +37,15 @@ jobs:
     - name: Build executables
       run: |
         pyinstaller --onefile ${{ matrix.script }}.py 
+
+        curl -X POST \
+            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Content-Type: application/octet-stream" \
+            --data-binary @dist/${{ matrix.script }} \
+            "https://uploads.github.com/repos/${{ github.repository }}/actions/artifacts?name=${{ matrix.script }}" 
         
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: ${{ matrix.script }}
-        path: dist/${{ matrix.script }}
+    # - name: Upload artifacts
+    #   uses: actions/upload-artifact@v2
+    #   with:
+    #     name: ${{ matrix.script }}
+    #     path: dist/${{ matrix.script }}
