--- a/.github/workflows/build_latest.yml
+++ b/.github/workflows/build_latest.yml
@@ -37,23 +37,10 @@ jobs:
     - name: Build executables
       run: |
         pyinstaller --onefile ${{ matrix.script }}.py 
+        apk add libc6-compat
 
-        # curl -X POST \
-        #     -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-        #     -H "Content-Type: application/octet-stream" \
-        #     --data-binary @dist/${{ matrix.script }} \
-        #     "https://uploads.github.com/repos/${{ github.repository }}/actions/artifacts?name=${{ matrix.script }}" 
-
-
-        curl -X POST \
-          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-          -F "file=@dist/${{ matrix.script }}" \
-          "https://uploads.github.com/repos/${{ github.repository }}/actions/artifacts" \
-          -F "name=${{ matrix.script }}"
-
-        
-    # - name: Upload artifacts
-    #   uses: actions/upload-artifact@v2
-    #   with:
-    #     name: ${{ matrix.script }}
-    #     path: dist/${{ matrix.script }}
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ matrix.script }}
+        path: dist/${{ matrix.script }}
