--- a/.github/workflows/build_latest.yml
+++ b/.github/workflows/build_latest.yml
@@ -14,8 +14,6 @@ jobs:
     runs-on: ubuntu-22.04-arm
     container: 
       image: python:3.10-alpine
-      volumes:
-        - ${{ github.workspace }}:/app
     strategy:
       matrix:
         script: [down_aria2, test]
@@ -40,7 +38,10 @@ jobs:
     - name: Build executables
       run: |
         pyinstaller --onefile ${{ matrix.script }}.py 
-        
+
+
+    - name: exit docker 
+      run: exit
         
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
