--- a/.github/workflows/build_latest.yml
+++ b/.github/workflows/build_latest.yml
@@ -40,11 +40,17 @@ jobs:
         pyinstaller --onefile ${{ matrix.script }}.py 
 
 
-    - name: exit docker 
-      run: exit
-        
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v4
+    # - name: Upload artifacts
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #     name: ${{ matrix.script }}
+    #     path: dist/${{ matrix.script }}
+
+    - name: Upload binaries to release
+      uses: svenstaro/upload-release-action@v2
       with:
-        name: ${{ matrix.script }}
-        path: dist/${{ matrix.script }}
+        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        file: dist/${{ matrix.script }}
+        tag: ${{ github.ref }}
+        overwrite: true
+        file_glob: true
