--- a/.github/workflows/build_latest.yml
+++ b/.github/workflows/build_latest.yml
@@ -46,11 +46,18 @@ jobs:
     #     name: ${{ matrix.script }}
     #     path: dist/${{ matrix.script }}
 
-    - name: Upload binaries to release
-      uses: svenstaro/upload-release-action@v2
+    # - name: Upload binaries to release
+    #   uses: svenstaro/upload-release-action@v2
+    #   with:
+    #     repo_token: ${{ secrets.GITHUB_TOKEN }}
+    #     file: dist/${{ matrix.script }}
+    #     tag: ${{ github.ref }}
+    #     overwrite: true
+    #     file_glob: true
+
+    - name: Upload to release
+      uses: JasonEtco/upload-to-release@master
       with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: dist/${{ matrix.script }}
-        tag: ${{ github.ref }}
-        overwrite: true
-        file_glob: true
+        args:  dist/${{ matrix.script }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
