--- a/.github/workflows/build_latest.yml
+++ b/.github/workflows/build_latest.yml
@@ -58,6 +58,6 @@ jobs:
     - name: Upload to release
       uses: JasonEtco/upload-to-release@master
       with:
-        args:  dist/${{ matrix.script }}
+        args:  mydav-py/dist/${{ matrix.script }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
