--- a/.github/workflows/build_latest.yml
+++ b/.github/workflows/build_latest.yml
@@ -16,7 +16,7 @@ jobs:
       image: python:3.10-alpine
     strategy:
       matrix:
-        script: [down_aria2, test]
+        script: [test]
     
     steps:
     - name: Checkout code
@@ -58,6 +58,6 @@ jobs:
     - name: Upload to release
       uses: JasonEtco/upload-to-release@master
       with:
-        args:  mydav-py/dist/${{ matrix.script }}
+        args:  dist/${{ matrix.script }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
