--- a/.github/workflows/build_latest.yml
+++ b/.github/workflows/build_latest.yml
@@ -9,15 +9,10 @@ jobs:
     runs-on: ubuntu-22.04-arm
     container: 
       image: python:3.10-alpine
-    strategy:
-      matrix:
-        script: [test]
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v1
-      with:
-        ref: '${{ github.event.inputs.ref }}'
 
     - name: update lib
       run: |
@@ -26,41 +21,30 @@ jobs:
         
     - name: Install Dependencies
       run: |
-        # python -m pip install --upgrade pip
         pip install pyinstaller    
         pip install -r requirements.txt
     
     - name: Build executables
       run: |
-        pyinstaller --onefile ${{ matrix.script }}.py 
+        pyinstaller --onefile --distpath=down_aria2 down_aria2.py
+        pyinstaller --onefile --distpath=ad ad.py
+        pyinstaller --onefile --distpath=ad2 ad2.py 
 
 
     - name: zip
       run: |
-        mkdir ${{ matrix.script }}
-        cp dist/${{ matrix.script }} ${{ matrix.script }}
-        tar -czvf ${{ matrix.script }}.tar.gz ${{ matrix.script }}
+        mkdir file
+        cp down_aria2/down_aria2 file
+        cp ad/ad file
+        cp ad2/ad2 file
+        tar -czvf file.tar.gz file
 
 
     - name: Upload to release
       uses: JasonEtco/upload-to-release@master
       with:
-        args: ${{ matrix.script }}.tar.gz application/octet-stream
+        args: file.tar.gz application/octet-stream
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     
-    # - name: Upload binaries to release
-    #   uses: svenstaro/upload-release-action@v2
-    #   with:
-    #     repo_token: ${{ secrets.GITHUB_TOKEN }}
-    #     file: dist/${{ matrix.script }}
-    #     tag: ${{ github.ref }}
-    #     overwrite: true
-    #     file_glob: true
-
-    # - name: Upload asset to release
-    #   uses: csexton/release-asset-action@v3
-    #   with:
-    #     file:  dist/${{ matrix.script }}
-    #     github-token: ${{ secrets.GITHUB_TOKEN }}
