--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04-arm
+    runs-on: ubuntu-latest
     name: Build on python:3.10-alpine for musl
     steps:
       - name: Checkout
