--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -17,32 +17,28 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Build with Docker (Alpine)
+      - name: Install system deps
         run: |
-          docker run --rm \
-            -v "$PWD":/src -w /src \
-            python:3.10-alpine sh -c "
-              apk add --no-cache binutils curl patchelf gcc g++ musl-dev &&
-              wget -O python-musl.tar.gz https://github.com/astral-sh/python-build-standalone/releases/download/20250630/cpython-3.10.18+20250630-x86_64-unknown-linux-musl-install_only.tar.gz &&
-              mkdir -p python-musl &&
-              tar -xzf python-musl.tar.gz -C python-musl --strip-components=1 &&
-              ./python-musl/bin/python3 -m ensurepip &&
-              ./python-musl/bin/pip3 install -U pip setuptools wheel &&
-              ./python-musl/bin/pip3 install -r requirements.txt &&
-              ./python-musl/bin/pip3 install nuitka &&
-              ./python-musl/bin/nuitka --standalone --output-dir=dist ad.py &&
-              ./python-musl/bin/nuitka --standalone --output-dir=dist down_aria2.py &&
-              chmod +x dist/ad.dist/ad.bin dist/down_aria2.dist/down_aria2.bin
-            "
+          sudo apt update
+          sudo apt install -y gcc g++ make patchelf libffi-dev tar
+
+      - name: Download musl-native Python 3.10
+        run: |
+          wget -O python-musl.tar.gz https://github.com/astral-sh/python-build-standalone/releases/download/20250630/cpython-3.10.18+20250630-x86_64-unknown-linux-musl-install_only.tar.gz
+          mkdir -p python-musl
+          tar -xzf python-musl.tar.gz -C python-musl --strip-components=1
+
+      - name: Build
+        run: |
+          ./python-musl/bin/python3 -m ensurepip 
+          ./python-musl/bin/pip3 install -U pip setuptools wheel 
+          ./python-musl/bin/pip3 install -r requirements.txt 
+          ./python-musl/bin/pip3 install nuitka 
+          ./python-musl/bin/nuitka --standalone --onefile --static-libpython=yes --output-dir=dist --nofollow-import-to=numpy --remove-output ad.py
+          ./python-musl/bin/nuitka --standalone --onefile --static-libpython=yes --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ad-musl
-          path: dist/ad.dist/
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: down_aria2-musl
-          path: dist/down_aria2.dist/
+          name: x64-musl
+          path: dist/
