--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -30,13 +30,17 @@ jobs:
 
       - name: Build
         run: |
-          ./python-musl/bin/python3 -m ensurepip 
-          ./python-musl/bin/pip3 install -U pip setuptools wheel 
-          ./python-musl/bin/pip3 install -r requirements.txt 
-          ./python-musl/bin/pip3 install nuitka 
-          ./python-musl/bin/nuitka --standalone --onefile --static-libpython=yes --output-dir=dist --nofollow-import-to=numpy --remove-output ad.py
-          ./python-musl/bin/nuitka --standalone --onefile --static-libpython=yes --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
-
+           docker run --rm \
+            -v "$PWD":/src -w /src \
+             alpine:latest sh -c "
+               apk add --no-cache binutils curl patchelf gcc g++ musl-dev &&
+              ./python-musl/bin/python3 -m ensurepip &&
+              ./python-musl/bin/pip3 install -U pip setuptools wheel &&
+              ./python-musl/bin/pip3 install -r requirements.txt &&
+              ./python-musl/bin/pip3 install nuitka &&
+              ./python-musl/bin/nuitka --standalone --onefile --static-libpython=yes --output-dir=dist --nofollow-import-to=numpy --remove-output ad.py &&
+              ./python-musl/bin/nuitka --standalone --onefile --static-libpython=yes --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
+            "
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
