--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -38,8 +38,8 @@ jobs:
               ./python-musl/bin/pip3 install -U pip setuptools wheel &&
               ./python-musl/bin/pip3 install -r requirements.txt &&
               ./python-musl/bin/pip3 install nuitka &&
-              ./python-musl/bin/nuitka --standalone --onefile --static-libpython=yes --output-dir=dist --nofollow-import-to=numpy --remove-output ad.py &&
-              ./python-musl/bin/nuitka --standalone --onefile --static-libpython=yes --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
+              ./python-musl/bin/nuitka --standalone --onefile --output-dir=dist --nofollow-import-to=numpy --remove-output ad.py &&
+              ./python-musl/bin/nuitka --standalone --onefile --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
             "
       - name: Upload artifact
         uses: actions/upload-artifact@v4
