--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -10,7 +10,7 @@ on:
             default: 'main'
 
 jobs:
-  build:
+  build-x86_64-musl:
     runs-on: ubuntu-latest
     name: Build on python:3.10-alpine for musl
     steps:
@@ -45,4 +45,29 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: x64-musl
+          path: dist/
+  
+  build-arm64-musl:
+    name: Build arm64 (musl/Alpine)
+    runs-on: ubuntu-22.04-arm
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Build with Docker (Alpine)
+        run: |
+          docker run --rm \
+            -v "$PWD":/src -w /src \
+            python:3.10-alpine sh -c "
+              apk add --no-cache binutils curl patchelf gcc g++ musl-dev &&
+              pip install -r requirements.txt &&
+              pip install nuitka &&
+              nuitka --standalone --onefile --output-dir=dist --nofollow-import-to=numpy --remove-output ad.py &&
+              nuitka --standalone --onefile --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
+            "
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: arm64-alpine
           path: dist/
