--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -12,7 +12,14 @@ on:
 jobs:
   build-x86_64:
     name: Build x86_64 (glibc)
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.runs_on }}
+    strategy:
+      matrix:
+        include:
+          - runs_on: ubuntu-22.04
+            platform: x64
+          - runs_on: ubuntu-22.04-arm
+            platform: arm64
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,7 +34,7 @@ jobs:
           pip install -r requirements.txt
           pip install nuitka
 
-      - name: Build x86_64 executable
+      - name: Build executable
         run: |
           nuitka --standalone --onefile --static-libpython=yes --output-dir=dist --nofollow-import-to=numpy --remove-output ad.py
           nuitka --standalone --onefile --static-libpython=yes --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
@@ -35,31 +42,5 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: x86_64
-          path: dist/
-
-
-  build-alpine:
-    name: Build arm64 (musl/Alpine)
-    runs-on: ubuntu-22.04-arm
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Build with Docker (Alpine)
-        run: |
-          docker run --rm \
-            -v "$PWD":/src -w /src \
-            python:3.10-alpine sh -c "
-              apk add --no-cache binutils curl patchelf gcc g++ musl-dev &&
-              pip install -r requirements.txt &&
-              pip install nuitka &&
-              nuitka --standalone --onefile --output-dir=dist --nofollow-import-to=numpy --remove-output ad.py &&
-              nuitka --standalone --onefile --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
-            "
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: arm64-alpine
+          name: ${{ matrix.platform }}
           path: dist/
