--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -4,56 +4,100 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
-    name: Build aarch64 musl binary
-    runs-on: ubuntu-22.04-arm
+  build-python:
+    runs-on: ubuntu-latest
+    name: Build static musl Python (aarch64)
 
     steps:
-      - name: Checkout source code
-        uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Install dependencies
+      - name: Install musl-cross-make
         run: |
           sudo apt update
-          sudo apt install -y build-essential git wget curl \
-              python3 python3-pip scons \
-              patchelf upx squashfs-tools \
-              g++ gcc unzip zlib1g-dev
-
-      - name: Clone and build musl-cross-make
-        run: |
+          sudo apt install -y make gcc g++ git wget tar
           git clone https://github.com/richfelker/musl-cross-make.git
           cd musl-cross-make
-          echo 'TARGET = aarch64-linux-musl' > config.mak
-          echo 'OUTPUT = /opt/musl-cross' >> config.mak
+          echo "TARGET = aarch64-linux-musl" > config.mak
+          echo "OUTPUT = $PWD/output" >> config.mak
           make -j$(nproc)
-          sudo make install
+
+      - name: Build Python 3.10 (static)
+        run: |
+          MUSL_PREFIX=$PWD/musl-cross-make/output
+          export PATH="$MUSL_PREFIX/bin:$PATH"
+
+          wget https://www.python.org/ftp/python/3.10.13/Python-3.10.13.tgz
+          tar -xf Python-3.10.13.tgz
+          cd Python-3.10.13
+
+          export CC=aarch64-linux-musl-gcc
+          export CXX=aarch64-linux-musl-g++
+          export AR=aarch64-linux-musl-ar
+          export RANLIB=aarch64-linux-musl-ranlib
+
+          ./configure \
+            --host=aarch64-linux-musl \
+            --build=$(uname -m)-linux-gnu \
+            --prefix=/opt/python-musl \
+            --enable-optimizations \
+            --with-ensurepip=install \
+            CFLAGS="-static" \
+            LDFLAGS="-static"
+
+          make -j$(nproc)
+          make install
+
+      - name: Package Python
+        run: |
+          tar -czf python-musl-aarch64.tar.gz -C /opt python-musl
+
+      - name: Upload Python
+        uses: actions/upload-artifact@v4
+        with:
+          name: python-musl-aarch64
+          path: python-musl-aarch64.tar.gz
+
+  build-binary:
+    runs-on: ubuntu-latest
+    name: Build Nuitka binary using static Python
+    needs: build-python
+
+    container: alpine:3.20
+
+    steps:
+      - name: Install dependencies
+        run: |
+          apk add --no-cache bash wget tar g++ make musl-dev build-base patchelf python3 py3-pip
+
+      - name: Download Python artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: python-musl-aarch64
+          path: ./python-dist
+
+      - name: Extract Python
+        run: |
+          tar -xzf ./python-dist/python-musl-aarch64.tar.gz -C /opt
+          ln -s /opt/python-musl/bin/python3 /usr/local/bin/python3
 
       - name: Install Nuitka
         run: |
-          pip install -U nuitka
+          python3 -m ensurepip
+          python3 -m pip install -U pip wheel setuptools
+          python3 -m pip install -U nuitka
 
-      - name: Compile ad.py with musl-gcc and Nuitka
+      - name: Write test.py
         run: |
-          mkdir -p build
+          echo 'print("Hello from static Nuitka binary!")' > test.py
 
-          export CC=/opt/musl-cross/bin/aarch64-linux-musl-gcc
-          export CXX=/opt/musl-cross/bin/aarch64-linux-musl-g++
-          export AR=/opt/musl-cross/bin/aarch64-linux-musl-ar
-          export RANLIB=/opt/musl-cross/bin/aarch64-linux-musl-ranlib
+      - name: Compile with Nuitka
+        run: |
+          nuitka test.py --standalone --static-libpython=yes --nofollow-imports --output-dir=output
+          mv output/test.bin output/test-musl.bin
 
-          nuitka ad.py \
-            --onefile \
-            --standalone \
-            --remove-output \
-            --nofollow-import-to=*.tests \
-            --static-libpython=yes \
-            --output-dir=build
-
-          mv build/ad.bin build/ad
-
-      - name: Upload binary artifact
+      - name: Upload binary
         uses: actions/upload-artifact@v4
         with:
-          name: arm64-musl
-          path: build/
+          name: test-musl-bin
+          path: output/test-musl.bin
