--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -10,9 +10,18 @@ on:
             default: 'main'
 
 jobs:
-  build-x86_64-musl:
+  build-musl:
     runs-on: ubuntu-latest
-    name: Build on python:3.10-alpine for musl
+    name: Build ${{ matrix.platform }} on python:3.10-alpine for musl
+    strategy:
+      matrix:
+        include:
+          - runs_on: ubuntu-22.04
+            platform: arm64
+            python_url: https://github.com/astral-sh/python-build-standalone/releases/download/20250828/cpython-3.10.18+20250828-aarch64-unknown-linux-musl-install_only.tar.gz
+          - runs_on: ubuntu-22.04-arm
+            platform: x64
+            python_url: https://github.com/astral-sh/python-build-standalone/releases/download/20250828/cpython-3.10.18+20250828-x86_64-unknown-linux-musl-install_only.tar.gz
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -24,7 +33,7 @@ jobs:
 
       - name: Download musl-native Python 3.10
         run: |
-          wget -O python-musl.tar.gz https://github.com/astral-sh/python-build-standalone/releases/download/20250630/cpython-3.10.18+20250630-x86_64-unknown-linux-musl-install_only.tar.gz
+          wget -O python-musl.tar.gz ${{ matrix.python_url }}
           mkdir -p python-musl
           tar -xzf python-musl.tar.gz -C python-musl --strip-components=1
 
@@ -44,30 +53,30 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: x64-musl
+          name: ${{ matrix.platform }}-musl
           path: dist/
   
-  build-arm64-musl:
-    name: Build arm64 (musl/Alpine)
-    runs-on: ubuntu-22.04-arm
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+  # build-arm64-musl:
+  #   name: Build arm64 (musl/Alpine)
+  #   runs-on: ubuntu-22.04-arm
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
 
-      - name: Build with Docker (Alpine)
-        run: |
-          docker run --rm \
-            -v "$PWD":/src -w /src \
-            python:3.10-alpine sh -c "
-              apk add --no-cache binutils curl patchelf gcc g++ musl-dev &&
-              pip install -r requirements.txt &&
-              pip install nuitka &&
-              nuitka --standalone --onefile --output-dir=dist --nofollow-import-to=numpy --remove-output ad.py &&
-              nuitka --standalone --onefile --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
-            "
+  #     - name: Build with Docker (Alpine)
+  #       run: |
+  #         docker run --rm \
+  #           -v "$PWD":/src -w /src \
+  #           python:3.10-alpine sh -c "
+  #             apk add --no-cache binutils curl patchelf gcc g++ musl-dev &&
+  #             pip install -r requirements.txt &&
+  #             pip install nuitka &&
+  #             nuitka --standalone --onefile --output-dir=dist --nofollow-import-to=numpy --remove-output ad.py &&
+  #             nuitka --standalone --onefile --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
+  #           "
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: arm64-alpine
-          path: dist/
+  #     - name: Upload artifact
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: arm64-alpine
+  #         path: dist/
