--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -39,17 +39,14 @@ jobs:
 
       - name: Build
         run: |
-           docker run --rm --platform=linux/${{ matrix.platform }} \
-            -v "$PWD":/src -w /src \
-             alpine:latest sh -c "
-               apk add --no-cache binutils curl patchelf gcc g++ musl-dev &&
-              ./python-musl/bin/python3 -m ensurepip &&
-              ./python-musl/bin/pip3 install -U pip setuptools wheel &&
-              ./python-musl/bin/pip3 install -r requirements.txt &&
-              ./python-musl/bin/pip3 install nuitka &&
-              ./python-musl/bin/nuitka --standalone --onefile --output-dir=dist --static-libpython=no --remove-output ad.py &&
-              ./python-musl/bin/nuitka --standalone --onefile --output-dir=dist --static-libpython=no --remove-output down_aria2.py
-            "
+            sudo apt-get update
+            sudo apt-get install -y musl musl-dev gcc g++ patchelf
+            ./python-musl/bin/python3 -m ensurepip
+            ./python-musl/bin/pip3 install -U pip setuptools wheel
+            ./python-musl/bin/pip3 install -r requirements.txt
+            ./python-musl/bin/pip3 install nuitka
+            ./python-musl/bin/nuitka --standalone --onefile --output-dir=dist --static-libpython=no --remove-output ad.py
+            ./python-musl/bin/nuitka --standalone --onefile --output-dir=dist --static-libpython=no --remove-output down_aria2.py
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
