--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -1,79 +1,44 @@
-name: Build with Nuitka (musl-compatible, Alpine)
+name: Build Nuitka ARM64 musl
 
 on:
+  push:
+    branches: [ "main" ]
   workflow_dispatch:
-    inputs:
-        ref:
-            type: string
-            description: 'Git ref from which to release'
-            required: true
-            default: 'main'
 
 jobs:
-  build-musl:
+  build-arm64-musl:
     runs-on: ubuntu-latest
-    name: Build ${{ matrix.platform }} on python:3.10-alpine for musl
-    strategy:
-      matrix:
-        include:
-          - runs_on: ubuntu-24.04-arm
-            platform: arm64
-            python_url: https://github.com/astral-sh/python-build-standalone/releases/download/20250902/cpython-3.10.18+20250902-aarch64-unknown-linux-musl-install_only_stripped.tar.gz
-          - runs_on: ubuntu-24.04
-            platform: amd64
-            python_url: https://github.com/astral-sh/python-build-standalone/releases/download/20250828/cpython-3.10.18+20250828-x86_64-unknown-linux-musl-install_only.tar.gz
     steps:
-      - name: Checkout
+      - name: Checkout source
         uses: actions/checkout@v4
 
-      - name: Install system deps
-        run: |
-          sudo apt update
-          sudo apt install -y gcc g++ make patchelf libffi-dev tar
+      # 1. 设置 QEMU，让 x86_64 Runner 能跑 arm64 容器
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: all
 
-      - name: Download musl-native Python 3.10
+      # 2. 用 Alpine arm64 容器编译 (musl libc)
+      - name: Build with Nuitka on Alpine (musl, arm64)
         run: |
-          wget -O python-musl.tar.gz ${{ matrix.python_url }}
-          mkdir -p python-musl
-          tar -xzf python-musl.tar.gz -C python-musl --strip-components=1
+          docker run --rm --platform=linux/arm64 \
+            -v "$PWD":/src -w /src \
+            alpine:3.20 sh -c "
+              set -e
+              apk add --no-cache \
+                python3 python3-dev py3-pip \
+                gcc g++ musl musl-dev binutils patchelf make
+              python3 -m ensurepip
+              pip3 install -U pip setuptools wheel
+              pip3 install -r requirements.txt || true
+              pip3 install nuitka
+              nuitka --standalone --onefile --output-dir=dist --static-libpython=no --remove-output ad.py
+              nuitka --standalone --onefile --output-dir=dist --static-libpython=no --remove-output down_aria2.py
+            "
 
-      - name: Build
-        run: |
-            sudo apt-get update
-            sudo apt-get install -y musl musl-dev gcc g++ patchelf
-            ./python-musl/bin/python3 -m ensurepip
-            ./python-musl/bin/pip3 install -U pip setuptools wheel
-            ./python-musl/bin/pip3 install -r requirements.txt
-            ./python-musl/bin/pip3 install nuitka
-            ./python-musl/bin/nuitka --standalone --onefile --output-dir=dist --static-libpython=no --remove-output ad.py
-            ./python-musl/bin/nuitka --standalone --onefile --output-dir=dist --static-libpython=no --remove-output down_aria2.py
-      - name: Upload artifact
+      # 3. 上传产物
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.platform }}-musl
-          path: dist/
-  
-  # build-arm64-musl:
-  #   name: Build arm64 (musl/Alpine)
-  #   runs-on: ubuntu-22.04-arm
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
-
-  #     - name: Build with Docker (Alpine)
-  #       run: |
-  #         docker run --rm \
-  #           -v "$PWD":/src -w /src \
-  #           python:3.10-alpine sh -c "
-  #             apk add --no-cache binutils curl patchelf gcc g++ musl-dev &&
-  #             pip install -r requirements.txt &&
-  #             pip install nuitka &&
-  #             nuitka --standalone --onefile --output-dir=dist --nofollow-import-to=numpy --remove-output ad.py &&
-  #             nuitka --standalone --onefile --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
-  #           "
-
-  #     - name: Upload artifact
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: arm64-alpine
-  #         path: dist/
+          name: arm64-musl-binaries
+          path: dist/*
