--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -1,44 +1,54 @@
-name: Build Nuitka ARM64 musl
+name: Build ARM64 Musl Python Binaries
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
-  build-arm64-musl:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-24.04
     steps:
-      - name: Checkout source
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      # 1. 设置 QEMU，让 x86_64 Runner 能跑 arm64 容器
-      - name: Set up QEMU
+      - name: Set up QEMU (for ARM64)
         uses: docker/setup-qemu-action@v3
-        with:
-          platforms: all
 
-      # 2. 用 Alpine arm64 容器编译 (musl libc)
-      - name: Build with Nuitka on Alpine (musl, arm64)
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build with Alpine ARM64
         run: |
           docker run --rm --platform=linux/arm64 \
             -v "$PWD":/src -w /src \
             alpine:3.20 sh -c "
               set -e
               apk add --no-cache \
-                python3 python3-dev py3-pip \
-                gcc g++ musl musl-dev binutils patchelf make
-              python3 -m ensurepip
-              pip3 install -U pip setuptools wheel
-              pip3 install -r requirements.txt || true
-              pip3 install nuitka
-              nuitka --standalone --onefile --output-dir=dist --static-libpython=no --remove-output ad.py
-              nuitka --standalone --onefile --output-dir=dist --static-libpython=no --remove-output down_aria2.py
+                python3 py3-pip py3-virtualenv \
+                gcc g++ musl musl-dev binutils patchelf make \
+                curl
+
+              # 创建虚拟环境
+              python3 -m venv venv
+              . venv/bin/activate
+
+              # 安装依赖
+              pip install -U pip setuptools wheel
+              pip install -r requirements.txt || true
+              pip install nuitka
+
+              # 编译成独立二进制 (musl)
+              venv/bin/nuitka --standalone --onefile --output-dir=dist \
+                --static-libpython=no --remove-output ad.py
+
+              venv/bin/nuitka --standalone --onefile --output-dir=dist \
+                --static-libpython=no --remove-output down_aria2.py
             "
 
-      # 3. 上传产物
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: arm64-musl-binaries
+          name: binaries-arm64
           path: dist/*
