--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -1,3 +1,4 @@
+
 name: Build Nuitka Binary for OpenWrt aarch64-musl
 
 on:
@@ -7,55 +8,25 @@ on:
 
 jobs:
   build:
+    name: Build arm64 (musl/Alpine)
     runs-on: ubuntu-22.04-arm
-
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install dependencies
+      - name: Build with Docker (Alpine)
         run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential musl musl-tools python3-pip wget
-
-      - name: Install Nuitka
-        run: |
-          pip install -U pip wheel setuptools
-          pip install -U nuitka
-
-      - name: Download and build Python (musl static)
-        run: |
-          # 下载 Python 源码（这里用 3.11 作为示例）
-          wget https://www.python.org/ftp/python/3.11.9/Python-3.11.9.tgz
-          tar -xzf Python-3.11.9.tgz
-          cd Python-3.11.9
-
-          # 配置 musl 静态编译
-          CC=musl-gcc ./configure \
-              --prefix=/opt/python-musl \
-              --enable-optimizations \
-              --disable-shared \
-              LDFLAGS="-static"
-
-          make -j$(nproc)
-          make install
-
-      - name: Build binary with Nuitka
-        run: |
-          export PATH="/opt/python-musl/bin:$PATH"
-          which python3
-          python3 --version
-
-          python3 -m nuitka \
-              --standalone \
-              --onefile \
-              --static-libpython=yes \
-              --output-dir=dist \
-              --nofollow-import-to=numpy \
-              --remove-output down_aria2.py
+          docker run --rm \
+            -v "$PWD":/src -w /src \
+            python:3.10-alpine sh -c "
+              apk add --no-cache binutils curl patchelf gcc musl-gcc musl-dev musl-tools &&
+              pip install -r requirements.txt &&
+              pip install nuitka &&
+              CC=musl-gcc nuitka --standalone --onefile --static-libpython=yes --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
+            "
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: down_aria2-musl-aarch64
-          path: dist/down_aria2.bin
+          name: arm64-alpine
+          path: dist/
