--- a/.github/workflows/build-musl.yml
+++ b/.github/workflows/build-musl.yml
@@ -19,7 +19,7 @@ jobs:
           docker run --rm \
             -v "$PWD":/src -w /src \
             python:3.10-alpine sh -c "
-              apk add --no-cache binutils curl patchelf gcc musl-gcc musl-dev musl-tools &&
+              apk add --no-cache binutils curl patchelf gcc musl-dev  &&
               pip install -r requirements.txt &&
               pip install nuitka &&
               CC=musl-gcc nuitka --standalone --onefile --static-libpython=yes --output-dir=dist --nofollow-import-to=numpy --remove-output down_aria2.py
